compiler-tests/src/test/data/diagnostic/suspend/BindsIsNotAllowed.kt
// ENABLE_SUSPEND_PROVIDERS

// RENDER_DIAGNOSTICS_FULL_TEXT

interface SuspendBindsInterface {
  @Binds suspend fun String.<!BINDS_ERROR!>bind<!>(): CharSequence
}

abstract class SuspendBindsClass {
  @Binds abstract suspend fun String.<!BINDS_ERROR!>bind<!>(): CharSequence
}
